fix: section align and navbar padding

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,7 @@ a {
 }
 
 .section {
-  padding-top: 100px;
+  padding-top: 50px;
   padding-bottom: 100px;
   position: relative;
 }
