--- a/styles/header.css
+++ b/styles/header.css
@@ -40,7 +40,7 @@
   justify-content: space-between;
 }
 
-.container {
+.container-nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
